# report-lcp-integration

./: .gitignore  Makefile  README.md  demo_app.py  requirements.txt  run.py
.aider.tags.cache.v4/: cache.db
agent/: .env.example  .gitignore  README.md  main.py  open-url.py  perf_crew.py  perf_crew_flow.py  pyproject.toml  report.json  report_apply_flow.py  test_azure.py
agent/config/: agents.yaml  tasks.yaml
agent/src/: browser_navigator.py  code_apply.py  lcp_filter_tool.py  parse_report.py  utils.py
agent/tools/: http_knowledge.py
report/src/: utils.js
report/src/core/: collect.js  multishot-prompt.js
