[project]
name = "crewai-perf-agent"
version = "0.1.0"
description = "A CrewAI project with performance optimization agent"
readme = "README.md"
requires-python = ">=3.12.0,<3.13.0"
dependencies = [
    "crewai",
    "pyyaml",
    "playwright",
    "httpx",
    "beautifulsoup4",
    "brotli>=1.1.0",
    "crewai-tools>=0.33.0",
]
